Fix: Updated business entity detection logic to be more consistent and match Go behavior by improving the company detection algorithm and entity type determination.